After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 730509 - facedetect: fix update on change
facedetect: fix update on change
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.x
Other Linux
: Normal normal
: 1.4.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-05-21 11:02 UTC by Nicola
Modified: 2014-07-22 11:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix update on_change (876 bytes, patch)
2014-05-21 11:02 UTC, Nicola
committed Details | Review
suggested descriptions (1.12 KB, patch)
2014-07-21 19:04 UTC, Nicola
committed Details | Review

Description Nicola 2014-05-21 11:02:45 UTC
Created attachment 276928 [details] [review]
fix update on_change

updates on_change post face detected for every frame, it should post bus messages only on_change
Comment 1 Thiago Sousa Santos 2014-05-30 19:16:14 UTC
Enum "GstFaceDetectUpdates" Default: 0, "every_frame"
(0): every_frame      - Send update messages on every frame
(1): on_change        - Send update messages on change (face detected/not detected)
(2): on_face          - Send update messages when a face is detected
(3): none             - Send no messages update

What if the face was detected changed position or if the number of detected faces change? I guess this "on_change" needs a better definition.
Comment 2 Nicola 2014-05-30 19:28:15 UTC
on_change means that a bus message is sended when a face is detected and another bus message is sended when no face is detected, no check is done on position or on number of faces,

the description should be clear enough (face detected/not detected) however english is not my native languange, what do you suggest?
Comment 3 Stefan Sauer (gstreamer, gtkdoc dev) 2014-07-20 20:44:03 UTC
from reading comment #2, I have difficulties to understand the difference of (1) and (2).
Comment 4 Nicola 2014-07-20 22:02:58 UTC
on_change:

- face detected => bus message
- face detected => no bus message
- face detected => no bus message
- no face detected => bus message
- no face detected => no bus message
- no face detected => no bus message
- face detected => bus message

on_face:

- face detected => bus message
- face detected => bus message
- face detected => bus message
- no face detected => no bus message
- no face detected => no bus message
- face detected => bus message

is clear now?
Comment 5 Stefan Sauer (gstreamer, gtkdoc dev) 2014-07-21 18:48:50 UTC
(In reply to comment #4)
> on_change:
> 
> - face detected => bus message
> - face detected => no bus message
> - face detected => no bus message
> - no face detected => bus message
> - no face detected => no bus message
> - no face detected => no bus message
> - face detected => bus message
> 
> on_face:
> 
> - face detected => bus message
> - face detected => bus message
> - face detected => bus message
> - no face detected => no bus message
> - no face detected => no bus message
> - face detected => bus message
> 
> is clear now?

Yes, maybe it can be reworded:
(1): on_change        - Send messages when a new face is detected or one is not anymore detected
(2): on_face          - Send messages whenever a face is detected
Comment 6 Stefan Sauer (gstreamer, gtkdoc dev) 2014-07-21 18:50:34 UTC
Review of attachment 276928 [details] [review]:

I think this makes sense.
Comment 7 Nicola 2014-07-21 19:04:56 UTC
Created attachment 281334 [details] [review]
suggested descriptions
Comment 8 Nicolas Dufresne (ndufresne) 2014-07-21 21:21:12 UTC
Review of attachment 281334 [details] [review]:

make sense
Comment 9 Thiago Sousa Santos 2014-07-22 10:23:27 UTC
Thanks for the review and updates, pushed both patches.

commit bd4ae189388386baa34bdcd1dfe6f49c8d568649
Author: Nicola Murino <nicola.murino@gmail.com>
Date:   Mon Jul 21 21:03:26 2014 +0200

    facedetect: improve enum GstFaceDetectUpdates descriptions
    
    https://bugzilla.gnome.org/show_bug.cgi?id=730509

commit 3896dd8413b22694409561920fd1b4bce095f514
Author: Nicola Murino <nicola.murino@gmail.com>
Date:   Wed May 21 12:59:57 2014 +0200

    facedetect: make updates on_change works as expected
    
    https://bugzilla.gnome.org/show_bug.cgi?id=730509
Comment 10 Nicola 2014-07-22 10:34:16 UTC
thanks! can you please push to 1.4 branch too? No regression is possible
Comment 11 Thiago Sousa Santos 2014-07-22 11:12:31 UTC
Done.

commit 5e258dcc0fa4317c00e4e19ebf06d553bd5a6115
Author: Nicola Murino <nicola.murino@gmail.com>
Date:   Mon Jul 21 21:03:26 2014 +0200

    facedetect: improve enum GstFaceDetectUpdates descriptions
    
    https://bugzilla.gnome.org/show_bug.cgi?id=730509

commit 028fce5bcd48ef267c4462b1973a381ea0a999e1
Author: Nicola Murino <nicola.murino@gmail.com>
Date:   Wed May 21 12:59:57 2014 +0200

    facedetect: make updates on_change works as expected
    
    https://bugzilla.gnome.org/show_bug.cgi?id=730509
Comment 12 Nicola 2014-07-22 11:17:07 UTC
thanks