facedetect: make updates on_change works as expected

https://bugzilla.gnome.org/show_bug.cgi?id=730509